Added shopping cart and categories-menu component.

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,3 +1,109 @@
-<p>
-  footer works!
-</p>
+<div class="bg-second container ctn-sb">
+  <div class="col">
+    <div class="font-bold logo">
+      <span class="pink  " style="border:1px solid #fff; padding: 15px">E</span>
+      <span><b>Shopper</b> </span>
+    </div>
+    <div>Dolore erat dolor sit lorem vero amet. Sed sit lorem magna, ipsum no sit erat lorem et magna ipsum dolore amet
+      erat.</div>
+    <div>
+      <div><img src="" alt=""></div>
+      123 Street, New York, USA
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      mail@domain.com
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      +012 345 67890
+    </div>
+  </div>
+  <div class="col">
+    <div><b>Quick Links</b></div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Home</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Our Shop</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Shop Detail</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Shopping Cart</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Checkout</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Contact Us</a>
+    </div>
+  </div>
+  <div class="col">
+    <div><b>Quick Links</b></div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Home</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Our Shop</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Shop Detail</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Shopping Cart</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Checkout</a>
+    </div>
+    <div>
+      <div><img src="" alt=""></div>
+      <a href="">Contact Us</a>
+    </div>
+  </div>
+  <div class="col">
+    <div><b>Newsletter</b></div>
+    <form class="col">
+      <div class="row">
+        <input class="form-contol  sub-inputs" type="text" placeholder="Your Name">
+      </div>
+      <div class="row">
+        <input class="form-contol sub-inputs" type="email" placeholder="Your Email">
+      </div>
+      <div class="row">
+        <input class="form-contol sub-inputs subscribe-btn" type="button" value="Subscribe Now">
+      </div>
+    </form>
+  </div>
+  <div class=" row " style="border-top: 1px solid #fff; padding: 10px 0;">
+    <div style="flex-grow: 1;">
+      © <a href=""><b>Your Site Name</b> </a>. All Rights Reserved. Designed by
+      <a href="https://htmlcodex.com/"><b>HTML Codex</b></a>
+    </div>
+    <div class="row ctn-sb">
+      <img src="/assets/images/card_types/visa.png" alt="Visa">
+      <img src="/assets/images/card_types/mastercard.png" alt="MasterCard">
+      <img src="/assets/images/card_types/paypal.png" alt="PayPal">
+      <img src="/assets/images/card_types/american-express.png" alt="American Express">
+      <img src="/assets/images/card_types/visa-electron.png" alt="Visa Electron">
+      <img src="/assets/images/card_types/maestro.png" alt="Maestro">
+    </div>
+  </div>
+</div>
+<div class="container">
+  <a class="adds" target="_blank" href="https://www.elegantthemes.com/affiliates/idevaffiliate.php?id=1687">
+    <img src="/assets/images/adds.jpg" alt="Wordpress Adds">
+  </a>
+</div>
