--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+
 <div class="container row ctn-fs">
   <div style="width:25%"></div>
   <div class="flex carousel">
@@ -61,151 +61,60 @@
   </div>
 </div>
 <ng-template #items>
-  <div class="container row ctn-sb">
-    <div class="col grey-border item" *ngFor="let item of itemsInfo">
-      <div class="grey-bottom flex" style="overflow: hidden;">
-        <img class="scale-image" src="/assets/images/{{item.imagePath}}" alt="{{item.imagePath}}">
+  <div class="col grey-border item" *ngFor="let item of itemsInfo">
+    <div class="grey-bottom flex" style="overflow: hidden;">
+      <img class="scale-image" src="/assets/images/{{item.imagePath}}" alt="{{item.imagePath}}">
+    </div>
+    <div style="text-align: center;padding: 6% 0">
+      <div>{{item.name}}</div>
+      <div>${{item.price}} <s class="">${{item.price}}</s></div>
+    </div>
+    <div class="row  ctn-sb grey-top" style="font-size: 0.6rem; padding: 4%;">
+      <div class="row">
+        <i class="fas fa-eye"></i>
+        <a href="" class="menu-link " style="padding-left: 5%;"> View Detail</a>
       </div>
-      <div style="text-align: center;padding: 6% 0">
-        <div>{{item.name}}</div>
-        <div>${{item.price}} <s class="">${{item.price}}</s></div>
-      </div>
-      <div class="row  ctn-sb grey-top" style="font-size: 0.6rem; padding: 4%;">
-        <div class="row">
-          <i class="fas fa-eye"></i>
-          <a href="" class="menu-link " style="padding-left: 5%;"> View Detail</a>
-        </div>
-        <div class="row">
-          <i class="fas fa-shopping-cart"></i>
-          <a href="" class="menu-link " style="padding-left: 5%;"> Add to Cart</a>
-        </div>
+      <div class="row">
+        <i class="fas fa-shopping-cart"></i>
+        <a href="" class="menu-link " style="padding-left: 5%;"> Add to Cart</a>
       </div>
     </div>
   </div>
 </ng-template>
 
-<div style="text-align: center;">
-  Trandy Products
+<div class="font-bold" style="text-align: center; padding-top:6%; font-size: 1.5rem;">
+  <div class="line">
+    <div class="upper-text no-ws-wrap">Trandy Products</div>
+  </div>
 </div>
-<ng-container *ngTemplateOutlet="items">
-</ng-container>
+<div class="container row ctn-sb">
+  <ng-container *ngTemplateOutlet="items">
+  </ng-container>
+</div>
 
 <div class="bg-second container col">
-  <div class="flex">Stay Updated</div>
-  <div class="flex">Amet lorem at rebum amet dolores. Elitr lorem dolor sed amet diam labore at justo ipsum eirmod duo
+  <div class="font-bold" style="text-align: center; padding-top:6%; font-size: 1.5rem;">
+    <div class="line">
+      <div class="upper-text no-ws-wrap bg-second ">Stay Updated</div>
+    </div>
+  </div>
+  <div class="flex center">Amet lorem at rebum amet dolores. Elitr lorem dolor sed amet diam labore at justo ipsum
+    eirmod duo
     labore labore.</div>
   <div class="row">
-    <input type="email" placeholder="Email Go Hear">
-    <input class="form-contol subscribe-btn" type="button" value="Subscribe">
+    <input class="form-contol sub-inputs " type="email" placeholder="Email Go Hear">
+    <input class="form-contol sub-inputs subscribe-btn" type="button" value="Subscribe">
   </div>
 </div>
 <div class="container col">
-  <div>Just arrived</div>
-  <div>
+
+  <div class="font-bold" style="text-align: center; padding-top:6%; font-size: 1.5rem;">
+    <div class="line">
+      <div class="upper-text no-ws-wrap ">Just arrived</div>
+    </div>
+  </div>
+  <div class="container row ctn-sb">
     <ng-container *ngTemplateOutlet="items">
     </ng-container>
   </div>
-</div>
-<div class="bg-second container ctn-sb">
-  <div class="col">
-    <div>Loggo</div>
-    <div>alabala</div>
-    <div>
-      <div><img src="" alt=""></div>
-      123 Street, New York, USA
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      mail@domain.com
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      +012 345 67890
-    </div>
-  </div>
-  <div class="col">
-    <div><b>Quick Links</b></div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Home</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Our Shop</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Shop Detail</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Shopping Cart</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Checkout</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Contact Us</a>
-    </div>
-  </div>
-  <div class="col">
-    <div><b>Quick Links</b></div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Home</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Our Shop</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Shop Detail</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Shopping Cart</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Checkout</a>
-    </div>
-    <div>
-      <div><img src="" alt=""></div>
-      <a href="">Contact Us</a>
-    </div>
-  </div>
-  <div class="col">
-    <div><b>Newsletter</b></div>
-    <form class="col">
-      <div class="row">
-        <input class="form-contol  sub-inputs" type="text" placeholder="Your Name">
-      </div>
-      <div class="row">
-        <input class="form-contol sub-inputs" type="email" placeholder="Your Email">
-      </div>
-      <div class="row">
-        <input class="form-contol sub-inputs subscribe-btn" type="button" value="Subscribe Now">
-      </div>
-    </form>
-  </div>
-  <div class=" row " style="border-top: 1px solid #fff; padding: 10px 0;">
-    <div style="flex-grow: 1;">
-      © <a href=""><b>Your Site Name</b> </a>. All Rights Reserved. Designed by
-      <a href="https://htmlcodex.com/"><b>HTML Codex</b></a>
-    </div>
-    <div class="row ctn-sb">
-      <img src="/assets/images/card_types/visa.png" alt="Visa">
-      <img src="/assets/images/card_types/mastercard.png" alt="MasterCard">
-      <img src="/assets/images/card_types/paypal.png" alt="PayPal">
-      <img src="/assets/images/card_types/american-express.png" alt="American Express">
-      <img src="/assets/images/card_types/visa-electron.png" alt="Visa Electron">
-      <img src="/assets/images/card_types/maestro.png" alt="Maestro">
-    </div>
-  </div>
-</div>
-<div>
-  Ads
 </div>
