--- a/src/styles.sass
+++ b/src/styles.sass
@@ -126,8 +126,13 @@ a
 .fab
     line-height: 1.5!important
 
+.logo
+    font-size: 1.7rem
+    margin: 15px 0
+    width: 20%
+
 .bg-second
-    background-color: #edf1ff
+    background-color: #edf1ff!important
 
 .container
     display: flex
@@ -179,10 +184,6 @@ ul
     padding: 0
     margin: 0
 
-ul.dropdown
-    width: 18%
-    position: absolute
-
 .no-wrap
     flex-wrap: nowrap
 
@@ -196,6 +197,7 @@ ul.dropdown
 .form-contol:focus
     border: none !important
     outline: none !important
+    padding: 0 0 0 2% !important
 
 .txt-r
     text-align: right!important
@@ -211,6 +213,9 @@ ul.dropdown
 
 .pinkBg
     background-color: $pink!important
+
+.menu-link
+    padding: 15px 8% 15px 5%!important
 
 .menu-link,
 .no-ws-wrap
@@ -277,7 +282,7 @@ ul.dropdown
     padding: 5px 15px
     margin: 2% 0
     margin-right: 4%
-    
+
 .item
     width: 20%
     margin: 2% 0
@@ -324,24 +329,19 @@ ul.dropdown
     color: #000
 
 .sub-inputs
-    width: 150px
-    height: 50px
+    width: 200px
+    height: 40px
+    margin-bottom: 5%
 
-.categories-btn
-    background-color: $pink
-    color: #000
-    padding: 15px
+.sub-inputs::placeholder
+    color: $grey-text
+    opacity: 1
 
-.category
-    color: #000
-    padding: 5px 15px
+.sub-inputs:-ms-input-placeholder
+    color: $grey-text
 
-.category:hover
-    color: $pink
-
-.categories-btn:hover,
-.categories-btn:focus
-    background-color: #c17a74!important
+.sub-inputs::-ms-input-placeholder
+    color: $grey-text
 
 .carousel
     width: 75%
@@ -356,5 +356,55 @@ ul.dropdown
     ul
         display: none!important
 
+.pages:hover,
+.pages:focus,
+.pages:active
+    ul
+        display: block!important
+        border: 1px solid #000
+        background-color: #fff
+        color: #000
+        margin-top: 15px
+        padding: 5px 0
+
+        li
+            padding: 0 15px
+
+        li:hover
+            background-color: $grey
+
 .p-top
     padding-top: 2rem
+
+.line
+    padding: 0 3%
+    position: relative
+    display: inline-block
+    letter-spacing: 1px
+
+.line::before
+    position: absolute
+    content: ""
+    top: 50%
+    left: 0
+    width: 100%
+    height: 2px
+    margin-top: -1px
+    background: #1c1c1c
+
+.upper-text
+    background-color: #FFF
+    z-index: 1
+    position: relative
+
+.adds
+    width: 80%
+    padding: 5% 10%
+
+.adds
+    img
+        object-fit: cover
+
+.search
+    width: 100%
+    height: -webkit-fill-available
