--- a/src/styles.sass
+++ b/src/styles.sass
@@ -181,8 +181,8 @@ s
 
 ul
     list-style-type: none
-    padding: 0
-    margin: 0
+    padding: 0!important
+    margin: 0!important
 
 .no-wrap
     flex-wrap: nowrap
@@ -408,3 +408,4 @@ ul
 .search
     width: 100%
     height: -webkit-fill-available
+    display: block
